same avec 4niveau

--- a/Elemental/Elemental/Elemental.csproj
+++ b/Elemental/Elemental/Elemental.csproj
@@ -42,6 +42,9 @@
     <None Update="Content\Player_IJ_Walk.sf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Content\salle1.tmx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Content\salle2.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
